; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_redis.c_on_gc_dispose_redis.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_redis.c_on_gc_dispose_redis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_mruby_redis_client_t = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @on_gc_dispose_redis to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_gc_dispose_redis(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.st_h2o_mruby_redis_client_t*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.st_h2o_mruby_redis_client_t*
  store %struct.st_h2o_mruby_redis_client_t* %7, %struct.st_h2o_mruby_redis_client_t** %5, align 8
  %8 = call i32 (...) @mrb_nil_value()
  %9 = load %struct.st_h2o_mruby_redis_client_t*, %struct.st_h2o_mruby_redis_client_t** %5, align 8
  %10 = getelementptr inbounds %struct.st_h2o_mruby_redis_client_t, %struct.st_h2o_mruby_redis_client_t* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32 %8, i32* %11, align 4
  %12 = load %struct.st_h2o_mruby_redis_client_t*, %struct.st_h2o_mruby_redis_client_t** %5, align 8
  %13 = getelementptr inbounds %struct.st_h2o_mruby_redis_client_t, %struct.st_h2o_mruby_redis_client_t* %12, i32 0, i32 0
  %14 = call i32 @h2o_redis_free(i32* %13)
  ret void
}

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i32 @h2o_redis_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
